[project]
name = "plenoptic-migrate"
version = "0.1.0"
description = "Small CLI to help users migrate from plenoptic 1.x to 2.0"
readme = "README.md"
authors = [
    { name = "William F. Broderick", email = "billbrod@gmail.com" }
]
# needed for pathlib.copy_into
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
plenoptic-migrate = "plenoptic_migrate.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
