[project]
name = "plenoptic-migrate"
dynamic = ["version"]
description = "Small CLI to help users migrate from plenoptic 1.x to 2.0"
readme = "README.md"
authors = [
    { name = "William F. Broderick", email = "billbrod@gmail.com" }
]
# needed for pathlib.copy_into
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
plenoptic-migrate = "plenoptic_migrate.main:app"

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/plenoptic-org/plenoptic-migrate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'
